# excursobot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
.cursor/rules/: file_structure_document.mdc  tech_stack_document.mdc
.github/workflows/: ci.yml
docs/: PRD.md  implementation_plan.mdc
src/: main.py
src/bot/: handlers.py
src/services/: openai_client.py
tests/: test_handlers.py  test_openai_client.py
